# outowiki

./: .gitignore  LICENSE  README.md  plan.md  pyproject.toml  초기 계획.md
.github/workflows/: publish.yml  test.yml
docs/: configuration.md  index.md  installation.md
docs/api/: analysis.md  exceptions.md  facade.md  models.md  modules.md  plans.md  providers.md
docs/guides/: documents.md  recording.md  search.md
examples/: agent_integration.py  basic_usage.py
src/outowiki/: __init__.py
src/outowiki/core/: __init__.py  config.py  exceptions.py  facade.py  store.py
src/outowiki/models/: __init__.py  analysis.py  content.py  history.py  plans.py  search.py
src/outowiki/modules/: __init__.py  agent.py  agent_loop.py  recorder.py  recorder_agent_loop.py  searcher.py  searcher_agent_loop.py  tools.py
src/outowiki/modules/reasoning_tools/: __init__.py
src/outowiki/modules/wiki_tools/: __init__.py
src/outowiki/prompts/: __init__.py  analysis.py  generation.py  planning.py
src/outowiki/providers/: __init__.py  anthropic.py  base.py  openai.py
src/outowiki/utils/: __init__.py  backlinks.py  filesystem.py  markdown.py  validation.py
tests/: conftest.py
tests/integration/: __init__.py  test_e2e.py  test_recorder.py  test_searcher.py
tests/unit/: __init__.py  test_history.py  test_models.py  test_providers.py  test_store.py  test_utils.py
